--- a/assets/style.css
+++ b/assets/style.css
@@ -29,6 +29,12 @@ img {
 }
 
 
+.instructions {
+	font-weight: bolder;
+	text-decoration: underline;
+}
+
+
 
 .stars, .twinkling, .clouds {
 	position:absolute;
