--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,8 @@ i {
 label {
     font-family: 'Bungee Hairline', cursive;
     color: rgb(13, 156, 56);
-    font-size: large;
+	font-size: large;
+	font-weight: 30px;
 }
 
 .text-center {
@@ -28,7 +29,24 @@ img {
     z-index: 3; */
 }
 
+.card-header {
+	background-color: snow;
+}
 
+.card-body {
+	background-color: lightgray;
+}
+
+.btn-default {
+	background-color: ghostwhite;
+}
+
+.topic-btn {
+border-block-color: red;
+}
+
+@import "susy";
+@import "compass/reset";
 
 .stars, .twinkling, .clouds {
 	position:absolute;
@@ -56,11 +74,11 @@ img {
 }
 
 @keyframes move-twink-back {
-	from {background-position:0 0;}
+	from {background-position:0 3;}
 	to {background-position:-10000px 5000px;}
 }
 
 @keyframes move-clouds-back {
-	from {background-position:0 0;}
+	from {background-position:0 5;}
 	to {background-position:10000px 0;}
 }
