got background to twinkle, made some ui changes in css

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,14 @@
 
 i {
+
     color: rgb(13, 156, 56);
-    font-family: 'Bungee Shade', cursive;
+	font-family: 'Bungee Shade', cursive;
+	
+}
+
+.header {
+	position: absolute;
+	z-index: 5;
 }
 
 label {
@@ -15,11 +22,28 @@ label {
     font-family: 'Bungee Shade', cursive;
     font-size: 4rem;
 }
+.adjustWidth{
+	width: 100%;
+}
+.pushDown{
+	margin-top:5%;
+}
 
-body {
+
+
+@media only screen and (max-width: 400px) {
+	.pushDown{
+		margin-top:30%;
+	}
+  }
+
+
+
+
+/* body {
     background: url(https://wallpapercave.com/wp/apRXQtN.jpg);
     background-repeat: repeat;
-}
+} */
 
 img {
     height: 250px;
@@ -36,37 +60,3 @@ img {
 
 
 
-.stars, .twinkling, .clouds {
-	position:absolute;
-	display:block;
-	top:0; bottom:0;
-	left:0; right:0;
-	width:100%; height:100%;
-}
-
-.stars {
-	z-index: 0;
-	background: #000 url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
-}
-
-.twinkling{
-	z-index: 1;
-	background:transparent url('https://image.ibb.co/ir1DE8/twinkling.png') repeat top center;
-	animation: move-twink-back 200s linear infinite;
-}
-
-.clouds{
-	z-index: 2;
-    background:transparent url('https://image.ibb.co/bT4N7T/clouds.png') repeat top center;
-	animation: move-clouds-back 200s linear infinite;
-}
-
-@keyframes move-twink-back {
-	from {background-position:0 0;}
-	to {background-position:-10000px 5000px;}
-}
-
-@keyframes move-clouds-back {
-	from {background-position:0 0;}
-	to {background-position:10000px 0;}
-}
