--- a/assets/style.css
+++ b/assets/style.css
@@ -14,8 +14,7 @@ i {
 label {
     font-family: 'Bungee Hairline', cursive;
     color: rgb(13, 156, 56);
-	font-size: large;
-	font-weight: bolder;
+    font-size: large;
 }
 
 .text-center {
@@ -53,61 +52,9 @@ img {
     z-index: 3; */
 }
 
-.card-header {
-	background-color: snow;
-}
 
-.card-body {
-	background-color: lightgray;
-}
-
-.btn-default {
-	background-color: ghostwhite;
-}
-
-.topic-btn {
-	color: rgb(13, 156, 56);
-	background-color: ghostwhite;
-    font-family: 'Bungee Shade', cursive;
-}
-
-#row {
-	margin-right: -1px;
-	margin-left: -1px;
-}
-
-.stars, .twinkling, .clouds {
-	position:absolute;
-	display:block;
-	top:0; bottom:0;
-	left:0; right:0;
-	width:100%; height:100%;
-}
-
-.stars {
-	z-index: 0;
-	background: #000 url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
-}
-
-.twinkling{
-	z-index: 1;
-	background:transparent url('https://image.ibb.co/ir1DE8/twinkling.png') repeat top center;
-	animation: move-twink-back 200s linear infinite;
-}
-
-.clouds{
-	z-index: 2;
-    background:transparent url('https://image.ibb.co/bT4N7T/clouds.png') repeat top center;
-	animation: move-clouds-back 200s linear infinite;
-}
-
-@keyframes move-twink-back {
-	from {background-position:0 3;}
-	to {background-position:-10000px 5000px;}
-}
-
-@keyframes move-clouds-back {
-	from {background-position:0 5;}
-	to {background-position:10000px 0;}
+.instructions {
+	font-weight: bolder;
+	text-decoration: underline;
 }
 
