--- a/assets/twinkling.css
+++ b/assets/twinkling.css
@@ -1,44 +1,50 @@
+.stars,
+.twinkling,
+.clouds {
+	position: fixed;
+	display: block;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 175%;
 
- .stars, .twinkling, .clouds {
-	 position: absolute;
-	 display: block;
-	 top: 0;
-	 bottom: 0;
-	 left: 0;
-	 right: 0;
-	 width: 100%;
-	 height: 1500px;
-
-	}
- .stars {
-	 z-index: 0;
-	 opacity: .99;
-	 background: black url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
-	 animation: move-twink-back 200s linear infinite; 
-}
- .twinkling {
-	 z-index: 1;
-	 background: black repeat top center;
-	 animation: blinker 2s linear infinite;
-	 opacity: 75%;
 }
 
-
-
- @keyframes move-twink-back {
-	 from {
-		 background-position: 0 0;
-	}
-	 to {
-		 background-position: -10000px 5000px;
-	}
+.stars {
+	z-index: 0;
+	opacity: .99;
+	background: black url('https://image.ibb.co/mjnygo/stars.png') repeat top center;
+	animation: move-twink-back 200s linear infinite;
 }
 
+.twinkling {
+	z-index: 1;
+	background: black repeat top center;
+	animation: blinker 2s linear infinite;
+	opacity: 75%;
+}
+
+div {
+	z-index: 99;
+}
+
+@keyframes move-twink-back {
+	from {
+		background-position: 0 0;
+	}
+
+	to {
+		background-position: -10000px 5000px;
+	}
+}
 
 @keyframes blinker {
 	25% {
 		opacity: 0;
 	}
+
 	50% {
 		opacity: 50%;
 	}
@@ -46,5 +52,4 @@
 	75% {
 		opacity: 20%;
 	}
-  }
- 
+}
